--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h5 class="hi">
               안녕하세요! <br>
               아기사자 10기🐅 강채연입니다 :-D<br>
-              ( 사진을 클릭해주세요! )
+              사진 Click!
           </h5>
           <!--FirstPage end-->
           <div class="contents">
