--- a/young.html
+++ b/young.html
@@ -24,22 +24,25 @@
                 <p class="textYoung">
                     저는 정릉 토박이입니다:D <br>
                     <br>
-                    2000년, 서울 성북구에서 태어났습니다 <br>
-                    어렸을 때는 이사를 많이 다녔어요! <br>
-                    9살 때 다시 성북구 정릉동으로 이사와서 작년 22살때까지 약 14년간 정릉에서 살았어요! <br>
+                    2000년, 서울 성북구에서 태어났어요 <br>
+                    어렸을 때는 이사를 많이 다녔습니다! <br>
+                    그리고 9살 때 다시 성북구 정릉동으로 이사와서 작년 22살때까지 약 14년간 정릉에서 살게 되었어요 <br>
                     지금은 수유 쪽에서 살고 있어요<br>
-                    초등학생일때는 컵스카우트 활동도 했었어요<br>
-                    중학생때는 국민대학교 바로 옆에 있는 고대부중 다녔어요<br>
-                    제가 이렇게 어릴때부터 매일 봐오던 국민대에 오게 될 줄은 몰랐어요<br>
-                    고등학교는 한성여고 다녔는데 국민대보다 멀어서 3년간 아침 6시 반 기상..<br>
-                    그래서 1학년 때는 1교시 수업이 별로 힘들다 못느꼈었는데 지금은..<br>
-                    어떻게 일어났는지 모르겠어요😂<br>
                     <br>
-                    고등학생 때는 장래희망이 간호사여서 3년 내내 간호학과를 목표로 공부했어요!<br>
-                    고3되어서 점점 간호학과에 가면 후회할 거 같다는 생각이 들었고<br>
+                    초등학생일때는 컵스카우트 활동을 했었어요<br>
+                    중학생때는 국민대학교 바로 옆에 있는 고대부중 다녔어요<br>
+                    저는 어릴때부터 매일 봐오던 국민대에 오게 될 줄은 몰랐습니다ㅎㅎ<br>
+                    그리고 한성여고 다녔는데 국민대보다 멀어서 3년간 아침 6시 반 기상..<br>
+                    덕분에 대학교 1학년 때 1교시 수업이 별로 힘들다 못느꼈었던거 같아요<br>
+                    하지만.. 지금은 어떻게 일어났는지 모르겠어요😂<br>
+                    <br>
+                    원래 고등학생 때는 장래희망이 간호사였어서 3년 내내 간호학과를 목표로 공부했었어요!<br>
+                    하지만 고3 때 간호학과에 가면 후회할 거 같다는 생각이 들었고<br>
                     국민대 임산생명공학과로 들어오게되었습니다ヾ(•ω•`)o <br>
-                    그리고 작년에 휴학하면서 진로고민을 계속 하다가 코딩을 접하고<br>
-                    다전공으로 소프트웨어 학부를 선택하기로 결정했습니다!<br>
+                    그리고 작년에 휴학하면서 진로고민을 계속 하다가 코딩을 접하게 되었고<br>
+                    소프트웨어학부를 다전공 하기로 결정했습니다!<br>
+                    멋쟁이 사자처럼 동아리도 들어오게 되었고요!<br>
+                    여러분을 만나게 되어서 정말 반가워요😊
                 </p>
               </div>
         </div>
