--- a/young.html
+++ b/young.html
@@ -23,10 +23,9 @@
             <div class="text">
                 <p class="textYoung">
                     저는 정릉 토박이입니다:D <br>
-                    <br>
-                    2000년, 서울 성북구에서 태어났어요 <br>
-                    어렸을 때는 이사를 많이 다녔습니다! <br>
-                    그리고 9살 때 다시 성북구 정릉동으로 이사와서 작년 22살때까지 약 14년간 정릉에서 살게 되었어요 <br>
+                    2000년, 서울 성북구에서 태어났어요 어렸을 때는 이사를 많이 다녔습니다! <br>
+                    그리고 9살 때 다시 성북구 정릉동으로 이사와서 <br>
+                    작년 22살때까지 약 14년간 정릉에서 살게 되었어요 <br>
                     지금은 수유 쪽에서 살고 있어요<br>
                     <br>
                     초등학생일때는 컵스카우트 활동을 했었어요<br>
