--- a/index.html
+++ b/index.html
@@ -1,72 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ABOUT ME</title>
-</head>
-<body>
-    <div>
-        <div class="FirstPage">
-            <a href="index.html">
-                <h5 class="aboutme"> About Me</h5>
-            </a> 
-            <h1>KANG CHAE YEON</h1>
-            <div class="FirstPage_img">
-                <img src="image/1.jpg" alt="제주도풍경사진">
-            </div>
-          <h5 class="hi">
-              안녕하세요! <br>
-              아기사자 10기🐅 강채연입니다 :-D<br>
-              사진 Click!
-          </h5>
-          <!--FirstPage end-->
-          <div class="contents">
-            <ul>
-                <li class="young">
-                    <div>When I Was Young</div>
-                    <a href="young.html">
-                        <img src="image/9.jpg" alt="자전거 사진">
-                    </a>
-                </li>
-                <li class="dog">
-                    <div>My Pets</div>
-                    <a href="dog.html">
-                        <img src="image/3.jpg" alt="창문 사진">
-                    </a>
-                </li>
-                <li class="like">
-                    <div>What I Like</div>
-                    <a href="like.html">
-                        <img src="image/4.jpg" alt="하늘 사진">
-                    </a>
-                </li>
-                <li class="hate">
-                    <div>What I Hate</div>
-                    <a href="hate.html">
-                        <img src="image/8.jpg" alt="">
-                    </a>
-                </li>
-                <li class="tmi">
-                    <div>TMI</div>
-                    <a href="tmi.html">
-                        <img src="image/10.jpg" alt="">
-                    </a>
-                </li>
-            </ul>
-          </div>
-          <!--contents list end-->
-        
-        </div>
-       
-    </div>
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>KCY</title>
+  </head>
+  <body></body>
 </html>
