feat: index.html 뼈대잡기

--- a/index.html
+++ b/index.html
@@ -19,5 +19,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KCY</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <header>
+        <span>KCY</span>
+        <img src="image/logoske.png" alt="logo" />
+      </header>
+      <nav>
+        <ul>
+          <li>About Me</li>
+          <li>
+            Favorite
+            <ul class="favoriteSubMenu">
+              <li>doing</li>
+              <li>music</li>
+              <li>movie</li>
+              <li>food</li>
+              <li>animation</li>
+            </ul>
+          </li>
+          <li>Recent Interest</li>
+          <li>Picture</li>
+        </ul>
+      </nav>
+      <section>
+        <article>내용</article>
+      </section>
+      <footer>
+        <address>
+          <p>강채연</p>
+          <p>010-1234-5678</p>
+          <p>Kookmin.univ Forest Product & Biotechnology</p>
+          <p>서울특별시 솔샘로25길 28</p>
+        </address>
+        <p class="copyright">Copyright 2022. codus all rights reserved.</p>
+      </footer>
+    </div>
+  </body>
 </html>
