--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
   <body>
     <div>
       <header>
-        <span class="logo"><a href="main.html">PORTFOLIO</a></span>
+        <span class="logo"><a href="index.html">PORTFOLIO</a></span>
         <nav>
           <ul>
-            <li><a href="main.html">About Me</a></li>
+            <li><a href="index.html">About Me</a></li>
             <li><a href="project.html">Project</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
